Changing overflow because of bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,30 +3,30 @@
 .questions, #intro {
   background-color: darkslategrey; 
   color: white; 
-  overflow:auto;
+  /*overflow:auto;*/
 }
 
 iframe {
 	margin:0 auto;
-	overflow:auto;
+	
 }
 
 .question {
 	font-family: sans-serif;
 	font-size: 1.5em;
-	overflow:auto;
+	/*overflow:auto;*/
 }
 .answer {
 	font-weight: bolder;
 	font-family: Courier;
 	font-size: 1.5em;
-	overflow:auto;
+	/*overflow:auto;*/
 
 }
 
-#question-div {
+/*#question-div {
 	overflow:auto;
-}
+}*/
 .answer:hover {
 	width:32%;
 	color:crimson;
